# gdislinux

./: .gitignore  INCAR  INPUT.txt  KPOINTS  POSCAR  README.md  audit-core-gl.sh  baso4  bootstrap-gtk3-local.sh  build-gtk3-local.sh  calcite  capture-gdis-window.sh  generate-qbox-xml-from-upf.sh  install  install-optional-ubuntu.sh  install-qbox-local.sh  install-user-launcher.sh  meson.build  meson_options.txt  model_114  model_114.gmf  qbox-out-to-xyz.sh  rebuild-meson.sh  rebuild-ubuntu.sh  run-example.sh  run-gdis.sh  run-qbox-roundtrip.sh  run-qbox-smoke.sh  run-uspex-output.sh  smoke-test-examples.sh  verify-display-automation.sh  verify-gtk4-building-tools.sh  verify-gtk4-overlays.sh  verify-gtk4-qbox-ui.sh  verify-gtk4-science-tools.sh  verify-gtk4-xyz-animation.sh  verify-optional-tools.sh  verify-pick-alignment.sh
.github/workflows/: ubuntu-build.yml  ubuntu-deb-packages.yml
ci/: build-deb-ubuntu.sh
debian/: README.source  changelog  control  copyright  files  gdis.1  gdis.desktop  gdis.install  gdis.manpages  gdis.substvars  gdislinux-qbox-data.install  gdislinux-qbox-wrapper  gdislinux-qbox.install  gdislinux-wrapper  gdislinux.1  gdislinux.desktop  gdislinux.install  gdislinux.manpages  rules  watch
debian/.debhelper/gdis/: dbgsym-build-ids
debian/.debhelper/gdis/dbgsym-root/DEBIAN/: control  (+1 more)
debian/gdis/DEBIAN/: control  md5sums
debian/source/: options
docs/: debian-upload-checklist.md  github-fork-guide.md  modernization-roadmap.md  paper-qbox-integration-draft.tex  qbox-potentials.md  renderer-audit.md
docs/releases/: 2026-04-17-gtk4-building-and-picking.md
examples/: README.md
models/: qbox_expert_demo.i  qbox_methane.qbox  qbox_methane.xml
models/Specific/: INCAR_1
models/tmp/qbox-gui/: so4_iso1.in  so4_iso1.out  so4_iso1.xyz
project_000000/: baso4-011_000000.gin  baso4-011_000001.gin  baso4-011_000002.gin  baso4-011_000003.gin  baso4-011_000004.gin  baso4-011_000005.gin  baso4-011_000006.gin  baso4-011_000007.gin  baso4-011_000008.gin  baso4-011_000009.gin  baso4-011_000010.gin  baso4-011_000011.gin  baso4-011_000012.gin  baso4-011_000013.gin  baso4-011_000014.gin  baso4-011_000015.gin  project.pcf
src/: analysis.c  command.c  coords.c  defect.c  dock.c  ff_gulp.c  file.c  file.h  file_gms.c  file_meta.c  file_qbox.c  file_xyz.c  gdis.h  gl_graph.c  gl_main.c  gl_stereo.c  gl_varray.c  gl_varray.h  graph.h  grisu_client.c  gui_analysis.c  gui_animate.c  gui_canvas.c  gui_defect.c  gui_defs.h  gui_dialog.c  gui_diffract.c  gui_edit.c  gui_gl.c  gui_gl.h  gui_gms.c  gui_gperiodic.c  gui_grid.c  gui_gtk_compat.h  gui_gulp.c  gui_help.c  gui_job.c  gui_main.c  gui_mdi.c  gui_measure.c  (+34 more)
src/modules/: makefile
tmp/qbox-gui/: baso4-011.i  qbox_methane.i
tmp/qbox-roundtrip/: methane.i  methane.xml
(+4 files in other folders)
